Refactored due to review

--- a/config/i18n-tasks.yml
+++ b/config/i18n-tasks.yml
@@ -181,6 +181,9 @@ ignore_unused:
   - decidim.surveys.admin.surveys.update.*
   - decidim.groups.roles.*
   - decidim.welcome_notification.*
+  - decidim.amendments.amendable.error
+  - decidim.amendments.emendation.announcement.*
+  - decidim.amendments.accept.error
 
 ## Exclude these keys from the `i18n-tasks eq-base' report:
 # ignore_eq_base:
